// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/WorkflowTemplate/DraggableCard render draggable card with desc and remove icon 1`] = `
<body>
  <div>
    <div
      aria-describedby=""
      aria-disabled="false"
      aria-roledescription="sortable"
      class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
      role="button"
      style="cursor: move;"
      tabindex="0"
    >
      <div
        class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
      >
        <span
          class="honour-icon"
        >
          <svg
            height="16"
            viewBox="0 0 14 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.25 2.333v8.588a.29.29 0 0 1-.174.267L7 13.434l-5.076-2.246a.29.29 0 0 1-.174-.268V2.333H.583V1.167h12.834v1.166zM4.667 7v1.167h4.666V7zm0-2.333v1.166h4.666V4.667z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-col step-box css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-card-body"
            >
              <span
                class="step-card-title"
              >
                test
              </span>
              <div
                class="step-card-desc"
              >
                test desc
              </div>
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-circle ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-1kuwm0s"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/WorkflowTemplate/DraggableCard render draggable card with empty desc 1`] = `
<body>
  <div>
    <div
      aria-describedby=""
      aria-disabled="false"
      aria-roledescription="sortable"
      class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
      role="button"
      style="cursor: move;"
      tabindex="0"
    >
      <div
        class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
      >
        <span
          class="honour-icon"
        >
          <svg
            height="16"
            viewBox="0 0 14 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.25 2.333v8.588a.29.29 0 0 1-.174.267L7 13.434l-5.076-2.246a.29.29 0 0 1-.174-.268V2.333H.583V1.167h12.834v1.166zM4.667 7v1.167h4.666V7zm0-2.333v1.166h4.666V4.667z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-col step-box css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-card-body"
            >
              <span
                class="step-card-title"
              >
                test
              </span>
              <div
                class="step-card-desc"
              >
                -
              </div>
              <div
                class="step-card-operator"
              >
                <div
                  class="operator-title"
                >
                  review
                </div>
                <div
                  class="operator-content"
                >
                  admin
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/WorkflowTemplate/DraggableCard render no card 1`] = `
<body>
  <div>
    <div
      aria-describedby=""
      aria-disabled="false"
      aria-roledescription="sortable"
      class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
      role="button"
      style="cursor: move;"
      tabindex="0"
    >
      <div
        class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
      >
        <span
          class="honour-icon"
        >
          <svg
            height="16"
            viewBox="0 0 14 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.25 2.333v8.588a.29.29 0 0 1-.174.267L7 13.434l-5.076-2.246a.29.29 0 0 1-.174-.268V2.333H.583V1.167h12.834v1.166zM4.667 7v1.167h4.666V7zm0-2.333v1.166h4.666V4.667z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-col step-box css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-card-body"
            >
              <span
                class="step-card-title"
              >
                test
              </span>
              <div
                class="step-card-desc"
              >
                -
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
